read status from status queue
